# github-copilot-upgrading

.github/workflows/: python-ci.yml
workshop/: README.md  README_KR.md
workshop/upgraded/: STRUCTURE_KR.md  pyproject.toml  setup.py
workshop/upgraded/guachi.egg-info/: SOURCES.txt
workshop/upgraded/guachi/tests/: test_database.py
